--- a/static/login.css
+++ b/static/login.css
@@ -3,8 +3,24 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    background-color: #337ab7;
-    color: white;
+    background-color: var(--action-color);
+    color: var(--forground-color);
+    border: none;
+    padding: 0.5rem 1rem;
+    margin-top: 0;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s;
+    margin-left: auto; /* pushes button to far right */
+}
+
+.logout-button {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    background-color: var(--disabled-color);;
+    color: var(--forground-color);
     border: none;
     padding: 0.5rem 1rem;
     margin-top: 0;
@@ -16,7 +32,11 @@
 }
 
 .login-button:hover {
-    background-color: #286090;
+    background-color: var(--action-hover-color);
+}
+
+.logout-button:hover {
+    background-color: var(--disabled-color);
 }
 
 /* Popup modal (unique component) */
@@ -26,7 +46,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: var(--shadow-color-dark);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,11 +54,11 @@
 }
 
 .popup-content {
-    background-color: #fff;
+    background-color: var(--primary-highligh-color);
     padding: 2rem;
     border-radius: 8px;
     width: 300px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px var(--shadow-color-light)
 }
 
 .popup-content h2 {
@@ -60,7 +80,7 @@
 .popup-content input {
     width: 100%;
     padding: 0.5rem;
-    border: 1px solid #ccc;
+    border: 1px solid var(--disabled-color);
     border-radius: 4px;
 }
 
@@ -71,9 +91,9 @@
 }
 
 .popup-content button[type="button"] {
-    background-color: #6c757d;
+    background-color: var(--action-cancel-color);;
 }
 
 .popup-content button[type="button"]:hover {
-    background-color: #5a6268;
+    background-color: var(--action-hover-color);
 }
