--- a/static/global.css
+++ b/static/global.css
@@ -4,9 +4,11 @@
     --dark-primary-foreground-color: #f9f9f9;
     --primary-header-color: #f2f2f2;
     --primary-highligh-color: #f9f9f9;
+    --primary-separator-color: #343a40;
     --secondary-background-color: #343a40;
     --secondary-foreground-color: white;
     --secondary-highligh-color: #ced4da;
+    --secondary-separator-color: #ced4da;
     --disabled-color: #ccc;
     --error-foreground-color: #d9534f;
     --dark-error-foreground-color: #d9534f;
@@ -74,6 +76,8 @@ body {
     color: var(--primary-foreground-color);
     background-color: var(--primary-background-color);
     font-family: 'Inter', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .form-group {
