--- a/static/response.css
+++ b/static/response.css
@@ -29,6 +29,8 @@
     font-size: 1rem;
     line-height: 0.8rem;
     border: 1px solid var(--primary-separator-color);
+    white-space: pre-wrap;
+    text-rendering: optimizeLegibility;
 }
 
 /* Reset margins for all children */
