--- a/static/global.css
+++ b/static/global.css
@@ -65,6 +65,10 @@ footer a:hover {
     font-weight: 500;
 }
 
+.nav-links a {
+    padding: 0.8rem;
+}
+
 main {
     padding: 1rem 0 3rem 0;
     max-width: 800px;
@@ -427,7 +431,9 @@ h1 {
 /* Checkbox styling */
 .checkbox-container {
 	display: flex;
-	gap: 2rem;
+	flex-wrap: wrap;
+	gap: 1rem;
+	justify-content: flex-start;
 	align-items: center;
 }
 
@@ -444,6 +450,8 @@ h1 {
 
 .checkbox-item label {
 	font-weight: 500;
+    flex: 1 1 auto;
+	min-width: 150px; /* Ensures items wrap nicely on smaller screens */
 }
 
 .checkbox-label-row {
@@ -522,4 +530,39 @@ h1 {
 .q3-row {
     color: var(--dark-primary-foreground-color);
     background-color: var(--legend-quartile-color);
+}
+
+/* Responsive Navigation Styles */
+@media (max-width: 1023px) {
+    nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .nav-home-link {
+        flex: 1 1 auto;
+    }
+
+    .nav-links {
+        display: none;
+    }
+
+    .nav-dropdown {
+        display: block;
+        background-color: var(--secondary-foreground-color);
+        color: var(--secondary-background-color);
+        border: 1px solid var(--secondary-highligh-color);
+        padding: 0.5rem;
+        font-size: 1rem;
+        border-radius: 4px;
+        margin-left: auto;
+    }
+}
+
+@media (min-width: 1024px) {
+    .nav-dropdown {
+        display: none;
+    }
 }
